--- a/InvoiceClient/app.config
+++ b/InvoiceClient/app.config
@@ -74,7 +74,7 @@
                 <value>False</value>
             </setting>
             <setting name="AppTitle" serializeAs="String">
-                <value>電子發票傳輸服務－店家用戶端</value>
+                <value>Electronic Invoice Transmission Service-Store Client</value>
             </setting>
             <setting name="UploadCsvInvoiceFolder" serializeAs="String">
                 <value>Invoice_csv</value>
@@ -159,9 +159,6 @@
             <setting name="ActivationKey" serializeAs="String">
                 <value />
             </setting>
-            <setting name="InvoiceClient_WS_Invoice_eInvoiceService" serializeAs="String">
-                <value>http://localhost:2598/Published/eInvoiceService.asmx</value>
-            </setting>
             <setting name="UploadCsvAllowanceFolder" serializeAs="String">
                 <value>Allowance_csv</value>
             </setting>
@@ -206,36 +203,6 @@
             </setting>
             <setting name="EnableB2BAutoReceiving" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="TransferManager" serializeAs="String">
-              <!-- MIG格式 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.MIGInvoiceTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- CSV格式 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.CsvInvoiceTransferManagerV2, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- XML格式 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.InvoiceTransferManagerForAgent, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- B2B相對營業人CSV格式 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.InvoiceBusinessTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- 營業人配號區段 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.BranchTrackTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- B2B XML格式 -->
-              <!--<value>
-                InvoiceClient.TransferManagement.B2BInvoiceTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>-->
-              <!-- EXCEL格式 -->
-              <value>
-                InvoiceClient.TransferManagement.XlsxInvoiceTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
-              </value>
             </setting>
             <setting name="ProcessCount" serializeAs="String">
                 <value>0</value>
@@ -298,6 +265,14 @@
             </setting>
             <setting name="AppCulture" serializeAs="String">
                 <value>en-US</value>
+            </setting>
+            <setting name="InvoiceClient_WS_Invoice_eInvoiceService" serializeAs="String">
+                <value>http://localhost:2598/Published/eInvoiceService.asmx</value>
+            </setting>
+            <setting name="TransferManager" serializeAs="String">
+                <value>
+                InvoiceClient.TransferManagement.XlsxInvoiceTransferManager, InvoiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null;
+              </value>
             </setting>
         </InvoiceClient.Properties.Settings>
     </applicationSettings>
