--- a/Model/app.config
+++ b/Model/app.config
@@ -12,6 +12,9 @@
         <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString"
             connectionString="Data Source=192.168.200.23\SQLEXPRESS;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111"
             providerName="System.Data.SqlClient" />
+        <add name="Model.Properties.Settings.EIVO03ConnectionString"
+            connectionString="Data Source=localhost\sqlexpress;Initial Catalog=EIVO03;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <applicationSettings>
         <Model.Properties.Settings>
