--- a/eIVOGo/Web.config
+++ b/eIVOGo/Web.config
@@ -32,7 +32,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" tempDirectory="G:\Asp.Net">
+    <compilation debug="true" targetFramework="4.7.2" tempDirectory="D:\Asp.Net">
       <assemblies>
         <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Web.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
@@ -43,7 +43,7 @@
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="20" />
+      <forms loginUrl="~/Account/CbsLogin" timeout="20" />
     </authentication>
     <authorization>
       <deny users="?" />
@@ -224,12 +224,7 @@
         <requestLimits maxAllowedContentLength="1073741824" />
       </requestFiltering>
     </security>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    
     <!--<httpErrors errorMode="Custom" existingResponse="Replace">
             <error statusCode="403" subStatusCode="14" responseMode="Redirect" path="/ReportError.htm" />
         </httpErrors>-->
@@ -238,7 +233,12 @@
         <!--<add value="login.aspx" />-->
       </files>
     </defaultDocument>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <applicationSettings>
     <eIVOGo.Properties.Settings>
       <setting name="ImageCodeKey" serializeAs="String">
@@ -465,6 +465,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
