--- a/Model/Properties/Settings.settings
+++ b/Model/Properties/Settings.settings
@@ -87,5 +87,13 @@
     <Setting Name="DefaultUserCarrierType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">3J0001</Value>
     </Setting>
+    <Setting Name="EIVO03ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=localhost\sqlexpress;Initial Catalog=EIVO03;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=localhost\sqlexpress;Initial Catalog=EIVO03;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
