--- a/Uxnet.Web/Web.config
+++ b/Uxnet.Web/Web.config
@@ -57,11 +57,12 @@
       <setting name="SignableObjectUrl" serializeAs="String">
         <value>~/published/Signable.exe</value>
       </setting>
-      <setting name="Uxnet_Web_WS_DocumentService_DocumentCreator" serializeAs="String">
+      <setting name="Uxnet_Web_WS_DocumentService_DocumentCreator"
+        serializeAs="String">
         <value>http://localhost:2013/DocumentCreator.asmx</value>
       </setting>
       <setting name="MailServer" serializeAs="String">
-        <value>mail.uxb2b.com</value>
+        <value>127.0.0.1:25</value>
       </setting>
       <setting name="HostUrl" serializeAs="String">
         <value>https://eivo.uxifs.com</value>
