--- a/InvoiceClient/app.config
+++ b/InvoiceClient/app.config
@@ -4,9 +4,6 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="InvoiceClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="InvoiceClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -235,7 +232,7 @@
                 <value>ZipInvoice</value>
             </setting>
             <setting name="PDFGeneratorOutput" serializeAs="String">
-                <value>C:\UXB2B_EIVO_GOOGLE\ZipInvoice</value>
+                <value>E:\UXB2B_EIVO_GOOGLE\ZipInvoice</value>
             </setting>
             <setting name="ClearTxnPath" serializeAs="String">
                 <value>False</value>
@@ -307,11 +304,4 @@
       </dependentAssembly>-->
         </assemblyBinding>
     </runtime>
-    <userSettings>
-        <InvoiceClient.Properties.Settings>
-            <setting name="UploadXlsxInvoiceFolder" serializeAs="String">
-                <value>Invoice_Xlsx</value>
-            </setting>
-        </InvoiceClient.Properties.Settings>
-    </userSettings>
 </configuration>
