--- a/eIVOGo/eIVOGo.csproj
+++ b/eIVOGo/eIVOGo.csproj
@@ -250,11 +250,9 @@
     <Content Include="App_Themes\Web.config" />
     <Content Include="bin\Ionic.Zip.dll" />
     <Content Include="bin\Ionic_Utils_Zip_license.txt" />
-    <Content Include="bin\License.txt" />
     <Content Include="bin\MessagingToolkit.QRCode.dll" />
     <Content Include="bin\QREncrypter.dll" />
     <Content Include="bin\ThirdParties.dll" />
-    <Content Include="bin\ThirdParties.pdb" />
     <Content Include="bin\ThoughtWorks.QRCode.dll" />
     <Content Include="bin\zxing.dll" />
     <Content Include="bin\zxing.presentation.dll" />
@@ -369,8 +367,8 @@
     <Content Include="EIVO\WebUploadMailMessage.aspx" />
     <Content Include="EIVO\WebUploadReturnMailMessage.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="images\e-GUIplatform%28360%29.png" />
     <Content Include="images\e-GUIplatform%28500%29.png" />
+    <Content Include="images\e-GUIplatform.png" />
     <Content Include="logs\ORCodeKey.txt" />
     <Content Include="Published\eInvoiceServiceGoogleCBM.asmx" />
     <Content Include="Scripts\FileSaver.min.js" />
@@ -405,6 +403,7 @@
     <Content Include="Views\SiteAction\FunctionTitleBar.cshtml" />
     <Content Include="Views\Common\Module\EnumSelector.cshtml" />
     <Content Include="Content\Web.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.11.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.11.3.js" />
     <Content Include="Scripts\jquery-1.11.3.min.js" />
@@ -1700,45 +1699,6 @@
     <Content Include="Visitor\InquireWinningInvoice.aspx" />
     <Content Include="Visitor\InquireInvoiceCancellation.aspx" />
     <Content Include="_TestOnly\ResetDB.aspx" />
-    <Content Include="_test\content\Hydrangeas.jpg" />
-    <Content Include="_test\content\Tulips.jpg" />
-    <Content Include="_test\DemoImage.aspx" />
-    <Content Include="_test\DemoDrawInvoice.aspx" />
-    <Content Include="_test\DemoPrintInvoicePOSPage.aspx" />
-    <Content Include="_test\DemoPrintInvoicePDF.aspx" />
-    <Content Include="_test\DemoPrintInvoiceCSS.aspx" />
-    <Content Include="_test\DoActivateUser.aspx" />
-    <Content Include="_test\TestNotifying.aspx" />
-    <Content Include="_test\DownloadText.aspx" />
-    <Content Include="_test\GoTesting.aspx" />
-    <Content Include="_test\MyPopupModal.ascx" />
-    <Content Include="_test\DemoPrintInvoicePage.aspx" />
-    <Content Include="_test\MyTest.aspx" />
-    <Content Include="_test\PutFiles.aspx" />
-    <Content Include="_test\DoC0701.aspx" />
-    <Content Include="_test\Test001.aspx" />
-    <Content Include="_test\TestC0501.aspx" />
-    <Content Include="_test\TestC0401.aspx" />
-    <Content Include="_test\TestE0402.aspx" />
-    <Content Include="_test\TestExcel.aspx" />
-    <Content Include="_test\TestQRCode.aspx" />
-    <Content Include="_test\TestInvoiceCancellation.aspx" />
-    <Content Include="_test\TestPWD.htm" />
-    <Content Include="_test\TestResponse2.aspx" />
-    <Content Include="_test\TestRouteConfig.aspx" />
-    <Content Include="_test\UpdateData.aspx" />
-    <Content Include="_test\TestC0701.aspx" />
-    <Content Include="_test\TestJS.aspx" />
-    <Content Include="_test\TestResponse.aspx" />
-    <Content Include="_test\TestInquiryJsGrid.aspx" />
-    <Content Include="_test\TestInvoiceJsGrid.aspx" />
-    <Content Include="_test\TestFields.aspx" />
-    <Content Include="_test\TestJsGrid.aspx" />
-    <Content Include="_test\TestTask.aspx" />
-    <Content Include="_test\TestAll.aspx" />
-    <Content Include="_test\TestDB.aspx" />
-    <Content Include="_test\TestRepeater.aspx" />
-    <Content Include="_test\TestPopup.aspx" />
     <Content Include="Helper\LoadZipCode.ashx" />
     <Content Include="Helper\Web.config" />
     <Content Include="packages.config">
@@ -1931,8 +1891,6 @@
     </Content>
     <Content Include="Published\UploadAttachmentForGoogle.ashx" />
     <Content Include="_TestOnly\Web.config" />
-    <Content Include="_test\Web.config" />
-    <Content Include="_test\WebDump.ashx" />
     <Content Include="Scripts\Web.config" />
     <Content Include="template\ContentPage.Master" />
     <Content Include="template\ContentScriptManagerPage.Master" />
@@ -1940,7 +1898,6 @@
     <Content Include="template\MvcTabPage.Master" />
     <Content Include="vendor\Web.config" />
     <Content Include="Views\Shared\JsAlert.ascx" />
-    <Content Include="_test\SaveTo.ashx" />
     <Content Include="Views\Template\MvcMainPage.cshtml" />
     <Content Include="Views\Handling\ScriptHelper\Common.cshtml" />
     <Content Include="Views\Handling\MailTracking\TableList.cshtml" />
