--- a/ProcessorUnit/ProcessorUnit.csproj
+++ b/ProcessorUnit/ProcessorUnit.csproj
@@ -68,10 +68,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Execution\ExecutorForeverBase.cs" />
     <Compile Include="Execution\ExecutorForever.cs" />
     <Compile Include="Execution\InvoiceExcelRequestForIssuerProcessor.cs" />
     <Compile Include="Execution\InvoiceExcelRequestForVACProcessor.cs" />
     <Compile Include="Execution\InvoiceExcelRequestForCBEProcessor.cs" />
+    <Compile Include="Execution\InvoiceXmlRequestForCBEProcessor.cs" />
+    <Compile Include="Execution\ProcessExceptionNotificationProcessor.cs" />
     <Compile Include="Execution\InvoiceExcelRequestProcessor.cs" />
     <Compile Include="Execution\VoidInvoiceExcelRequestProcessor.cs" />
     <Compile Include="Execution\AllowanceExcelRequestProcessor.cs" />
@@ -89,7 +92,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
@@ -97,6 +100,10 @@
     <Folder Include="Helper\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj">
+      <Project>{8cf5d523-2ab2-4a61-9660-5ab9e36f48d6}</Project>
+      <Name>Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{2f1547b6-2dd4-4a57-a40f-258103591603}</Project>
       <Name>Model</Name>
